# ratslam

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: config_husky_hwu_corridor.txt.in  config_irataus.txt.in  config_irataus.yaml  config_neoslam_robotarium.txt.in  config_oxford_newcollege.txt.in  config_robotarium.yaml  config_stlucia.txt.in  config_stlucia.yaml  config_surveyor.txt.in  config_surveyor.yaml  config_surveyor_BBC_Pier.yaml  config_surveyor_MMC_lake.yaml  config_surveyor_MMC_lake_VO.yaml  config_surveyor_t2.txt.in  config_surveyor_visual.txt.in  neoslam_robotarium.yaml
docs/: index.html  style.css
launch/: irataus copy.launch  irataus.launch  oxford_newcollege.launch  robotarium.launch  stlucia.launch  surveyor_20250416_125458.launch  surveyor_20250416_131706.launch  surveyor_BBC_Pier.launch  surveyor_MMC_lake.launch  surveyor_MMC_lake_VO.launch  surveyor_visual_20250416_125458.launch  tempo_execucao_odo_callback_pc.txt  tempo_execucao_odo_ros2_callback_em.txt  tempo_execucao_ros2_action_callback_em.txt  tempo_execucao_ros2_image_callback_lv.txt  tempo_execucao_ros2_odo_callback_pc.txt  tempo_execucao_ros2_template_callback_pc.txt  tempo_execucao_template_callback_pc.txt
mermaid_diagrams/: PC_sequence_diagram.mmd  create_view_diagram.mmd  exp_delta_pc_diagram.mmd  on_image_diagram.mmd  on_view_template_diagram.mmd  posecells_diagram_full.mmd  posecells_signals.mmd  view_tamplate_diagram.mmd
scripts/: README.md  config.py  export_bagfile.sh  extract_gps_data.py  extract_groundTruth.py  extract_nodes_edges_map.py  extract_topics.m  extract_topics.py  extract_topics_V1.py  extract_topological_map.py  lat_lon_to_cartesian.m  show_deadreckoning.asv  show_deadreckoning.m  show_em.asv  show_em.m  show_id.asv  show_id.m  trajectories_view.py
scripts/Figures/: Ground_truth.eps  dead_reckoning.eps  vt_em_ids.eps  vt_ex_ids.eps
scripts/Figures/Exp_Map/: Distance_error.eps  Final_Exp_map.eps  experience_map_evolution.avi
scripts/Figures/Exp_Map/map_evolution/: PartialMap_1.eps  PartialMap_10.eps  PartialMap_11.eps  PartialMap_12.eps  PartialMap_13.eps  PartialMap_14.eps  PartialMap_15.eps  PartialMap_16.eps  PartialMap_17.eps  PartialMap_18.eps  PartialMap_19.eps  PartialMap_2.eps  PartialMap_20.eps  PartialMap_21.eps  PartialMap_22.eps  PartialMap_23.eps  PartialMap_24.eps  PartialMap_25.eps  PartialMap_26.eps  PartialMap_27.eps  PartialMap_28.eps  PartialMap_29.eps  PartialMap_3.eps  PartialMap_30.eps  PartialMap_31.eps  PartialMap_32.eps  PartialMap_33.eps  PartialMap_34.eps  PartialMap_35.eps  PartialMap_36.eps  PartialMap_37.eps  PartialMap_38.eps  PartialMap_4.eps  PartialMap_5.eps  PartialMap_6.eps  PartialMap_7.eps  PartialMap_8.eps  PartialMap_9.eps
scripts/exported_data/: em_id.csv  gps.csv  ground_truth.csv  links.csv  map.csv  nodes.csv  pose.csv  show_id.asv  vt_id.csv
scripts/output_bags/surveyor_data1_t1/: metadata.yaml  surveyor_data1_t1_0.db3
scripts/output_bags/surveyor_data1_t2/: metadata.yaml  surveyor_data1_t2_0.db3
scripts/output_bags/surveyor_data1_t3/: metadata.yaml  surveyor_data1_t3_0.db3
scripts/output_bags/surveyor_data1_t4/: metadata.yaml  surveyor_data1_t4_0.db3
scripts/output_bags/surveyor_data1_t5/: metadata.yaml  surveyor_data1_t5_0.db3
scripts/output_bags/surveyor_test1.bag/: metadata.yaml  surveyor_test1.bag_0.db3
src/: main_em.cpp  main_lv.cpp  main_pc.cpp  main_vo.cpp
src/graphics/: experience_map_scene.h  local_view_scene.h  path_node.h  posecell_scene.h
src/ratslam/: Image.cc  Image.hh  VisualTemplate.cc  VisualTemplate.hh  VisualTemplateSet.cc  VisualTemplateSet.hh  experience_map.cpp  experience_map.h  local_view_match.cpp  local_view_match.h  posecell_network.cpp  posecell_network.h  utils.h  visual_odometry.cpp  visual_odometry.h
topological_msgs/: CMakeLists.txt  README.md  package.xml
topological_msgs/msg/: TopologicalAction.msg  TopologicalEdge.msg  TopologicalMap.msg  ViewTemplate.msg
