<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ratslam</name>
  <version>1.0.0</version>
  <description>This is a port of the original ratslam_ros repository from https://openslam-org.github.io/openratslam.html to ROS 2.</description>
  <maintainer email="borgesjvt@gmail.com">João Victor Torres Borges</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>topological_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_uncrustify</test_depend>
  <test_depend>ament_cpplint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
